# typeshed-tests

./: .gitignore  README.md
src/: pyproject.toml
src/psycopg2/: issue-11282.py
