[tool.poetry]
name = "typeshed-tests"
version = "0.1.0"
description = ""
authors = ["Mike Zimin <mikeziminio@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "~3.12"
psycopg2-binary = "^2.9.9"
types-psycopg2 = "^2.9.21.20240118"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
